@@ -1,3 +1,4 @@
+Die lcd_clear Funktion für den ST7565 Controller umgestellt.
 Die Anzeigezeiten für das Impulsdrehgeber-Ergebnis verlängert.
 Verkürzung des Strompulses der ESR-Messung von 27us auf 8us.
 Sperrschichtkapazität bei Diode wird mit 2 Dezimalstellen ausgegeben. 3 Stellen nur bei LCD_LINE_LENGTH > 16 .
